# lyrical

./: .dockerignore  Cargo.toml  out  out2  out3  out4
liblyrical/: .gitignore  Cargo.toml
liblyrical/src/: lib.rs  word_count.rs
liblyrical/src/lyrics/: decorating.rs  failover.rs  musixmatch.rs
liblyrical/src/lyrics/caching/: mod.rs
liblyrical/test_data/: playlist-input-short.json
liblyrical/test_data/songs/: house_of_fire.txt
lyrical-api/: Cargo.toml  DOCKERFILE
lyrical-api/deploy/: deployment.yaml  service.yaml
lyrical-api/src/: main.rs
lyrical-cli/: Cargo.toml  DOCKERFILE
lyrical-cli/src/: main.rs
lyrical-cli/src/tests/: main.rs
lyrical-cli/test_data/: playlist-input.json
lyrical-fe/: Cargo.toml  DOCKERFILE
lyrical-fe/src/: main.rs
lyrical-fe/www/static/: index.html
scripts/: build.ps1  deploy.ps1
scripts/shared/: config.json  shared.ps1
src/: lyrics.rs  main.rs  utils.rs  word_count.rs
src/lyrics/: cached.rs  failover.rs  logging.rs  mod.rs  musix_match.rs  simplifying.rs  song.rs
src/lyrics/cached/: dev_cache.rs  mod.rs
src/tests/: main.rs
test_data/: playlist-input-short.json
test_data/cached/: test_cache_temp.json
