[package]
name = "lyrics"
version = "0.1.0"
authors = ["Eric <elauffenburger@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.1"
maplit = "1.0.2"
regex = "1.3.7"
reqwest = { version = "0.10", features = ["json", "blocking"] }
scraper = "0.12"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
tokio = { version = "0.2", features = ["full"] }