[package]
name = "lyrical-fe"
version = "0.1.0"
authors = ["Eric <elauffenburger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.111"
tokio = { version = "0.2.21", features = ["full"] }
warp = "0.2.3"
